--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-paginate": "^6.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0"
+    "react-super-responsive-table": "^5.1.2",
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
