--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -23,6 +24,7 @@
     "react-scripts": "3.4.3",
     "react-super-responsive-table": "^5.1.2",
     "styled-components": "^5.2.0",
+    "sweetalert": "^2.1.2",
     "yup": "^0.29.3"
   },
   "scripts": {
