--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-animation": "^1.2.2",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^16.13.1",
     "react-paginate": "^6.5.0",
     "react-router-dom": "^5.2.0",
